<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".HomeWork_5.Fragments.HW_5_ContactInfo_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imgImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/madgin_outside"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                style="@style/HW_5_textView_style"
                android:layout_gravity="center_horizontal"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/firstNameEditText"
                style="@style/HW_5_textView_style"
                android:layout_width="match_parent"
                android:hint="@string/nameHintText"
                android:inputType="text"
                android:textSize="16sp"
                tools:text="@tools:sample/first_names" />

            <TextView
                style="@style/HW_5_textView_style"
                android:layout_gravity="center_horizontal"
                android:text="@string/lastname"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lastNameEditText"
                style="@style/HW_5_textView_style"
                android:layout_width="match_parent"
                android:hint="@string/lastnameHintText"
                android:inputType="text"
                android:textSize="16sp"
                tools:text="@tools:sample/last_names" />

            <TextView
                style="@style/HW_5_textView_style"
                android:layout_gravity="center_horizontal"
                android:text="@string/telephone"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/telephoneNumberEditText"
                style="@style/HW_5_textView_style"
                android:layout_width="match_parent"
                android:hint="@string/telephoneHinttext"
                android:inputType="text|phone"
                android:textSize="16sp"
                tools:text="@tools:sample/us_phones" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveButton"
                    style="@style/HW_5_textView_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sawebuttonText"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/HW_5_textView_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancelButtonText"
                    android:textAllCaps="false"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>