<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OkHttp.OkHttp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_HW_OkHttp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar_HW_OkHttp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:navigationContentDescription="Back to the previous screen"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="OkHttp app" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView_bookList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/textview"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout_HW_OkHttp" />

    <Button
        android:id="@+id/addBook_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_book"
        app:layout_constraintBottom_toTopOf="@+id/remuveBook_Button"
        app:layout_constraintEnd_toEndOf="@+id/remuveBook_Button"
        app:layout_constraintStart_toStartOf="@+id/remuveBook_Button"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/remuveBook_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/madgin_outside"
        android:text="@string/remuve_book"
        app:layout_constraintBottom_toTopOf="@+id/refresh_button"
        app:layout_constraintEnd_toEndOf="@+id/refresh_button"
        app:layout_constraintStart_toStartOf="@+id/refresh_button"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/bookName_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/madgin_outside"
        android:ems="10"
        android:hint="@string/enter_the_book_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/madgin_outside"
        android:gravity="center_horizontal"
        android:text="@string/httpurlconnection"
        app:layout_constraintBottom_toTopOf="@+id/addBook_Button"
        app:layout_constraintEnd_toEndOf="@+id/remuveBook_Button"
        app:layout_constraintStart_toStartOf="@+id/remuveBook_Button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/madgin_outside"
        android:gravity="center_horizontal"
        android:text="@string/okhttp"
        app:layout_constraintBottom_toTopOf="@+id/addBook_OkHttp_Button"
        app:layout_constraintEnd_toEndOf="@+id/remuveBook_OkHttp_Button"
        app:layout_constraintStart_toStartOf="@+id/remuveBook_OkHttp_Button" />

    <Button
        android:id="@+id/addBook_OkHttp_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/madgin_outside"
        android:text="@string/add_book"
        app:layout_constraintBottom_toTopOf="@+id/remuveBook_OkHttp_Button"
        app:layout_constraintEnd_toEndOf="@+id/remuveBook_OkHttp_Button"
        app:layout_constraintStart_toStartOf="@+id/remuveBook_OkHttp_Button" />

    <Button
        android:id="@+id/remuveBook_OkHttp_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/madgin_outside"
        android:text="@string/remuve_book"
        app:layout_constraintBottom_toTopOf="@+id/refresh_OkHttp_button"
        app:layout_constraintEnd_toEndOf="@+id/refresh_OkHttp_button"
        app:layout_constraintStart_toStartOf="@+id/refresh_OkHttp_button" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/madgin_outside"
        android:text="@string/refresh_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/refresh_OkHttp_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/refresh_OkHttp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/madgin_outside"
        android:text="@string/refresh_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/refresh_button" />


</androidx.constraintlayout.widget.ConstraintLayout>